--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="/js/slickbudget.js"></script>
     <script src="/js/controllers/app.js"></script>
     <script src="/js/controllers/home.js"></script>
+    <script src="/js/controllers/track.js"></script>
     <script src="/js/controllers/reports.js"></script>
     <link href='//fonts.googleapis.com/css?family=Roboto:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
