--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="/js/controllers/home.js"></script>
     <script src="/js/controllers/track.js"></script>
     <script src="/js/controllers/reports.js"></script>
+    <script src="/js/services/tracker.js"></script>
     <link href='//fonts.googleapis.com/css?family=Roboto:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="/styles/slickbudget.css" rel="stylesheet">
@@ -44,7 +45,7 @@
 
     <div class="container-fluid">
         <div class="view-panel">
-            <div class="view-animate" ng-view></div>
+            <div class="animate-fade" ng-view></div>
         </div>
     </div>
   </body>
