--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="slickbudget">
+<html lang="en" ng-app="moneta">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -8,7 +8,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.1/angular-route.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.1/angular-touch.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="/js/slickbudget.js"></script>
+    <script src="/js/moneta.js"></script>
     <script src="/js/controllers/app.js"></script>
     <script src="/js/controllers/home.js"></script>
     <script src="/js/controllers/track.js"></script>
@@ -16,7 +16,7 @@
     <script src="/js/services/tracker.js"></script>
     <link href='//fonts.googleapis.com/css?family=Roboto:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/styles/slickbudget.css" rel="stylesheet">
+    <link href="/styles/moneta.css" rel="stylesheet">
   </head>
   <body ng-controller="AppController as app">
       <nav class="navbar navbar-inverse" role="navigation">
