--- a/index.html
+++ b/index.html
@@ -2,20 +2,8 @@
 <html lang="en" ng-app="moneta">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.1/angular.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.1/angular-animate.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.1/angular-route.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.1/angular-touch.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="/js/moneta.js"></script>
-    <script src="/js/controllers/app.js"></script>
-    <script src="/js/controllers/home.js"></script>
-    <script src="/js/controllers/track.js"></script>
-    <script src="/js/controllers/reports.js"></script>
-    <script src="/js/services/tracker.js"></script>
     <link href='//fonts.googleapis.com/css?family=Roboto:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="/styles/moneta.css" rel="stylesheet">
   </head>
   <body ng-controller="AppController as app">
@@ -28,7 +16,7 @@
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>
                   </button>
-                  <a class="navbar-brand" href="#">Slick Budget</a>
+                  <a class="navbar-brand" href="#">Moneta</a>
               </div>
 
               <div class="collapse navbar-collapse" id="nav-collapse">
@@ -48,5 +36,18 @@
             <div class="animate-fade" ng-view></div>
         </div>
     </div>
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-animate.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-touch.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <script src="/js/moneta.js"></script>
+    <script src="/js/controllers/app.js"></script>
+    <script src="/js/controllers/home.js"></script>
+    <script src="/js/controllers/track.js"></script>
+    <script src="/js/controllers/reports.js"></script>
+    <script src="/js/services/tracker.js"></script>
   </body>
 </html>
