--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <script src="/js/controllers/home.js"></script>
     <script src="/js/controllers/track.js"></script>
     <script src="/js/controllers/reports.js"></script>
+    <script src="/js/services/crud.js"></script>
     <script src="/js/services/tracker.js"></script>
   </body>
 </html>
