Make the tracking/recent events view the default/landing page, and get rid of the old 'Home'.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 
               <div class="collapse navbar-collapse" id="nav-collapse">
                   <ul class="nav navbar-nav">
-                      <li><a href ng-click="app.goHome()">Home</a>
-                      <li><a href ng-click="app.goToTracking()">Track</a>
+                      <li><a href ng-click="app.goHome()">Track</a>
                       <li><a href ng-click="app.goToReports()">Reports</a>
                       <li><a href ng-click="app.goToPreferences()">Preferences</a>
                   </ul>
@@ -47,7 +46,6 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.7.0/lodash.min.js"></script>
     <script src="/js/moneta.js"></script>
     <script src="/js/controllers/app.js"></script>
-    <script src="/js/controllers/home.js"></script>
     <script src="/js/controllers/track.js"></script>
     <script src="/js/controllers/reports.js"></script>
     <script src="/js/services/crud.js"></script>
