Add start of Preferences UI, not functional yet.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.7.0/lodash.min.js"></script>
     <script src="/js/moneta.js"></script>
     <script src="/js/controllers/app.js"></script>
+    <script src="/js/controllers/prefs.js"></script>
     <script src="/js/controllers/track.js"></script>
     <script src="/js/controllers/reports.js"></script>
     <script src="/js/services/crud.js"></script>
